Home page mobile terminado css y html

--- a/index.html
+++ b/index.html
@@ -5,23 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/style.css">
   
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism website</title>
 </head>
 <body>
 
-  00 Home
+  <nav class="nav container">
+    <img src="./assets/shared/logo.svg" alt="Logo" class="nav__logo">
+
+    <div class="nav__responsive">
+      <img src="./assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
+      <img src="./assets/shared/icon-close.svg" alt="Icon close" class="icon icon__close">
+    </div>
+  </nav>
+
+  <main class="main container">
+
+    <h5 class="main__h5">So, you want to travel to</h5>
+    <h1 class="main__h1">Space</h1>
+    <p class="main__p">Let’s face it; if you want to go to space, you might as well genuinely go to 
+      outer space and not hover kind of on the edge of it. Well sit back, and relax 
+      because we’ll give you a truly out of this world experience!
+    </p>
+
+    <button class="main__button">Explore</button>
+  </main>
+
+  <!-- 00 Home
   01 Destination
   02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
-
-  Explore
+  03 Technology-->
 
 </body>
 </html>
