Archivo app.js con funcion de boton en menu añadido

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <div class="nav__responsive">
       <img src="./assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
       <img src="./assets/shared/icon-close.svg" alt="Icon close" class="icon icon__close">
+
+      <ul class="nav__ul">
+        <li class="ul__li"><a href="#"><span>00</span> HOME</a></li>
+        <li class="ul__li"><a href="#"><span>01</span> DESTINATION</a></li>
+        <li class="ul__li"><a href="#"><span>02</span> CREW</a></li>
+        <li class="ul__li"><a href="#"><span>03</span> TECHNOLOGY</a></li>
+      </ul>
+
     </div>
   </nav>
 
@@ -36,6 +44,8 @@
   01 Destination
   02 Crew
   03 Technology-->
+
+  <script src="js/app.js"></script>
 
 </body>
 </html>
