--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <img src="./assets/shared/icon-close.svg" alt="Icon close" class="icon icon__close">
 
       <ul class="nav__ul">
-        <li class="ul__li"><a href="#"><span>00</span> HOME</a></li>
-        <li class="ul__li"><a href="#"><span>01</span> DESTINATION</a></li>
+        <li class="ul__li"><a href="index.html"><span>00</span> HOME</a></li>
+        <li class="ul__li"><a href="pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
         <li class="ul__li"><a href="#"><span>02</span> CREW</a></li>
         <li class="ul__li"><a href="#"><span>03</span> TECHNOLOGY</a></li>
       </ul>
