--- a/pages/destination/destination-europa.html
+++ b/pages/destination/destination-europa.html
@@ -5,34 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="/css/style.css">
   
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism website</title>
 </head>
-<body>
+<body class="destination">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  <nav class="nav container">
+    <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
 
-  01 Pick your destination
+    <div class="nav__responsive">
+      <img src="/assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
+      <img src="/assets/shared/icon-close.svg" alt="Icon close" class="icon icon__close">
 
-  Moon
-  Mars
-  Europa
-  Titan
+      <ul class="nav__ul">
+        <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
+        <li class="ul__li"><a href="pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
+        <li class="ul__li"><a href="#"><span>02</span> CREW</a></li>
+        <li class="ul__li"><a href="#"><span>03</span> TECHNOLOGY</a></li>
+      </ul>
 
-  Europa
+    </div>
+  </nav>
 
-  The smallest of the four Galilean moons orbiting Jupiter, Europa is a 
-  winter lover’s dream. With an icy surface, it’s perfect for a bit of 
-  ice skating, curling, hockey, or simple relaxation in your snug 
-  wintery cabin.
+  <main class="main main__destination">
 
-  Avg. distance
-  628 mil. km
+    <h2><span>01</span>Pick your destination</h2>
 
-  Est. travel time
-  3 years
+    <div class="main__img">
+      <img src="/assets/destination/image-europa.png" alt="Image Europa"> 
+      <!-- <img src="/assets/destination/image-europa.webp" alt="Image Europa">  -->
+    </div>
+
+    <div class="destination__options">
+      <ul>
+        <li>Moon</li>
+        <li>Mars</li>
+        <li>Europa</li>
+        <li>Titan</li>
+      </ul>
+    </div>
+
+    <h1 class="main__h1">Europa</h1>
+
+    <p class="destination__p">
+      The smallest of the four Galilean moons orbiting Jupiter, Europa is a 
+      winter lover’s dream. With an icy surface, it’s perfect for a bit of 
+      ice skating, curling, hockey, or simple relaxation in your snug 
+      wintery cabin.
+    </p>
+
+    <div class="rectangulo"></div>
+
+    <div class="destination__info">
+      <p>Avg. distance</p>
+      <span>628 mil. km</span>
+    </div>
+
+    <div class="destination__info">
+      <p>Est. travel time</p>
+      <span>3 years</span>
+    </div>
+
+  </main>
+
+  <script src="/js/app.js"></script>
 </body>
+  
 </html>
