--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -5,33 +5,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="/css/style.css">
   
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism website</title>
 </head>
-<body>
+<body class="destination">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  <nav class="nav container">
+    <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
 
-  01 Pick your destination
+    <div class="nav__responsive">
+      <img src="/assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
+      <img src="/assets/shared/icon-close.svg" alt="Icon close" class="icon icon__close">
 
-  Moon
-  Mars
-  Europa
-  Titan
+      <ul class="nav__ul">
+        <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
+        <li class="ul__li"><a href="pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
+        <li class="ul__li"><a href="#"><span>02</span> CREW</a></li>
+        <li class="ul__li"><a href="#"><span>03</span> TECHNOLOGY</a></li>
+      </ul>
 
-  Moon
+    </div>
+  </nav>
 
-  See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-  regain perspective and come back refreshed. While you’re there, take in some history 
-  by visiting the Luna 2 and Apollo 11 landing sites.
+  <main class="main main__destination">
 
-  Avg. distance
-  384,400 km
+    <h2><span>01</span>Pick your destination</h2>
 
-  Est. travel time
-  3 days
+    <div class="main__img">
+      <img src="/assets/destination/image-moon.png" alt="Image Moon"> 
+      <!-- <img src="/assets/destination/image-moon.webp" alt="Image Moon">  -->
+    </div>
+
+    <div class="destination__options">
+      <ul>
+        <li>Moon</li>
+        <li>Mars</li>
+        <li>Europa</li>
+        <li>Titan</li>
+      </ul>
+    </div>
+
+    <h1 class="main__h1">MOON</h1>
+
+    <p class="destination__p">
+      See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
+      regain perspective and come back refreshed. While you’re there, take in some history 
+      by visiting the Luna 2 and Apollo 11 landing sites.
+    </p>
+
+    <div class="rectangulo"></div>
+
+    <div class="destination__info">
+      <p>Avg. distance</p>
+      <span>384,400 km</span>
+    </div>
+
+    <div class="destination__info">
+      <p>Est. travel time</p>
+      <span>3 days</span>
+    </div>
+
+  </main>
+
+  <script src="/js/app.js"></script>
 </body>
 </html>
