--- a/pages/crew/crew-commander.html
+++ b/pages/crew/crew-commander.html
@@ -5,23 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="/css/style.css">
   
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism website</title>
 </head>
-<body>
+<body class="crew">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  <nav class="nav container">
+    <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
 
-  02 Meet your crew
+    <div class="nav__responsive">
+      <img src="/assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
+      <img src="/assets/shared/icon-close.svg" alt="Icon close" class="icon icon__close">
 
-  Commander
-  Douglas Hurley
+      <ul class="nav__ul">
+        <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
+        <li class="ul__li"><a href="/pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
+        <li class="ul__li"><a href="crew-commander.html"><span>02</span> CREW</a></li>
+        <li class="ul__li"><a href="#"><span>03</span> TECHNOLOGY</a></li>
+      </ul>
 
-  Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-  and former NASA astronaut. He launched into space for the third time as 
-  commander of Crew Dragon Demo-2.
+    </div>
+  </nav>
+
+  <main class="main main__crew" id="main">
+
+    <h2 class="crew__title"><span>02</span>Meet your crew</h2>
+
+    <div class="crew__img">
+      <img id="img" src="/assets/crew/image-douglas-hurley.png" alt="Douglas Hurley"> 
+    </div>
+
+    <div class="crew__options">
+      <ul>
+        <li id="destination1"></li>
+        <li id="destination2"></li>
+        <li id="destination3"></li>
+        <li id="destination4"></li>
+      </ul>
+    </div>
+
+    <h2 class="crew__h2" id="role">Commander</h2>
+    <h1 class="crew__h1" id="name">Douglas Hurley</h1>
+
+    <p class="crew__p" id="description">
+      Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
+      and former NASA astronaut. He launched into space for the third time as 
+      commander of Crew Dragon Demo-2.
+    </p>
+
+  </main>
+
+  <script src="/js/app.js"></script>
+  <script src="js/crew.js"></script>
 </body>
 </html>
