--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -5,28 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="/css/style.css">
   
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism website</title>
 </head>
-<body>
+<body class="technology">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  <nav class="nav container">
+    <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
 
-  03 Space launch 101
+    <div class="nav__responsive">
+      <img src="/assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
+      <img src="/assets/shared/icon-close.svg" alt="Icon close" class="icon icon__close">
 
-  1
-  2
-  3
+      <ul class="nav__ul">
+        <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
+        <li class="ul__li"><a href="/pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
+        <li class="ul__li"><a href="/pages/crew-commander.html"><span>02</span> CREW</a></li>
+        <li class="ul__li"><a href="technology-vehicle.html"><span>03</span> TECHNOLOGY</a></li>
+      </ul>
 
-  The terminology...
-  Launch vehicle
+    </div>
+  </nav>
 
-  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-  payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-  WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-  it's quite an awe-inspiring sight on the launch pad!
+  <main class="main main__technology" id="main">
+
+    <h2 class="technology__title"><span>03</span>Space launch 101</h2>
+
+    <div class="technology__img">
+      <img id="img" src="/assets/technology/image-launch-vehicle-landscape.jpg" alt="Launch vehicle landscape"> 
+    </div>
+
+    <div class="technology__options">
+      <ul>
+        <li id="destination1">1</li>
+        <li id="destination2">2</li>
+        <li id="destination3">3</li>
+      </ul>
+    </div>
+
+    <h2 class="technology__h2" id="terminology">The terminology...</h2>
+    <h1 class="technology__h1" id="name">Launch vehicle</h1>
+
+    <p class="technology__p" id="description">
+      A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
+      payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
+      WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
+      it's quite an awe-inspiring sight on the launch pad!
+    </p>
+
+  </main>
+
+  <script src="/js/app.js"></script>
+  <script src="js/technology.js"></script>
+  
 </body>
 </html>
