technology css basico terminado

--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -44,15 +44,17 @@
       </ul>
     </div>
 
-    <h2 class="technology__h2" id="terminology">The terminology...</h2>
-    <h1 class="technology__h1" id="name">Launch vehicle</h1>
+    <div class="technology__data">
+      <h2 class="technology__h2" id="terminology">The terminology...</h2>
+      <h1 class="technology__h1" id="name">Launch vehicle</h1>
 
-    <p class="technology__p" id="description">
-      A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-      payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-      WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-      it's quite an awe-inspiring sight on the launch pad!
-    </p>
+      <p class="technology__p" id="description">
+        A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
+        payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
+        WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
+        it's quite an awe-inspiring sight on the launch pad!
+      </p>
+    </div>
 
   </main>
 
