technology funcionalidad javascript implementada

--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -38,9 +38,9 @@
 
     <div class="technology__options">
       <ul>
-        <li id="destination1">1</li>
-        <li id="destination2">2</li>
-        <li id="destination3">3</li>
+        <li id="technology1">1</li>
+        <li id="technology2">2</li>
+        <li id="technology3">3</li>
       </ul>
     </div>
 
