Modificada el script de funcionalidad de technology

--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -21,7 +21,7 @@
       <ul class="nav__ul">
         <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
         <li class="ul__li"><a href="/pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
-        <li class="ul__li"><a href="/pages/crew-commander.html"><span>02</span> CREW</a></li>
+        <li class="ul__li"><a href="/pages/crew/crew-commander.html"><span>02</span> CREW</a></li>
         <li class="ul__li"><a href="technology-vehicle.html"><span>03</span> TECHNOLOGY</a></li>
       </ul>
 
@@ -37,10 +37,10 @@
     </div>
 
     <div class="technology__options">
-      <ul>
-        <li id="technology1">1</li>
-        <li id="technology2">2</li>
-        <li id="technology3">3</li>
+      <ul id="options">
+        <li id="technology1 option">1</li>
+        <li id="technology2 option">2</li>
+        <li id="technology3 option">3</li>
       </ul>
     </div>
 
