Cambio en la estructura del html de nav, nav responsive tablet css añadido

--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -17,18 +17,20 @@
   <nav class="nav container">
     <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
 
-    <div class="nav__responsive">
+    <div class="nav__buttons">
       <img src="/assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
       <img src="/assets/shared/icon-close.svg" alt="Icon close" class="icon icon__close">
-
+    </div>
+    
+    <div class="nav__responsive">
       <ul class="nav__ul">
         <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
         <li class="ul__li"><a href="destination-moon.html"><span>01</span> DESTINATION</a></li>
         <li class="ul__li"><a href="/pages/crew/crew-commander.html"><span>02</span> CREW</a></li>
         <li class="ul__li"><a href="/pages/technology/technology-vehicle.html"><span>03</span> TECHNOLOGY</a></li>
       </ul>
-
     </div>
+    
   </nav>
 
   <main class="main main__destination" id="main">
