--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
@@ -61,14 +61,16 @@
 
     <div class="rectangulo"></div>
 
-    <div class="destination__info">
-      <p>Avg. distance</p>
-      <span id="distance">384,400 km</span>
-    </div>
-
-    <div class="destination__info">
-      <p>Est. travel time</p>
-      <span id="travel">3 days</span>
+    <div class="destination__data">
+      <div class="destination__info">
+        <p>Avg. distance</p>
+        <span id="distance">384,400 km</span>
+      </div>
+  
+      <div class="destination__info">
+        <p>Est. travel time</p>
+        <span id="travel">3 days</span>
+      </div>
     </div>
 
   </main>
