Technology desktop css añadido

--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -38,7 +38,8 @@
     <h2 class="technology__title"><span>03</span>Space launch 101</h2>
 
     <div class="technology__img">
-      <img id="img" src="/assets/technology/image-launch-vehicle-landscape.jpg" alt="Launch vehicle landscape"> 
+      <img id="img" class="img-mobile" src="/assets/technology/image-launch-vehicle-landscape.jpg" alt="Launch vehicle landscape">
+      <img id="img2" class="img-desktop" src="/assets/technology/image-launch-vehicle-portrait.jpg" alt="Launch vehicle landscape">
     </div>
 
     <div class="technology__options">
