Index html y css terminados con responsive

--- a/pages/crew/crew-commander.html
+++ b/pages/crew/crew-commander.html
@@ -26,14 +26,14 @@
       <ul class="nav__ul">
         <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
         <li class="ul__li"><a href="/pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
-        <li class="ul__li"><a href="crew-commander.html"><span>02</span> CREW</a></li>
+        <li class="ul__li active"><a href="crew-commander.html"><span>02</span> CREW</a></li>
         <li class="ul__li"><a href="/pages/technology/technology-vehicle.html"><span>03</span> TECHNOLOGY</a></li>
       </ul>
     </div>
     
   </nav>
 
-  <main class="main main__crew" id="main">
+  <main class="main__crew" id="main">
 
     <h2 class="crew__title"><span>02</span>Meet your crew</h2>
 
