--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -25,7 +25,7 @@
     <div class="nav__responsive">
       <ul class="nav__ul">
         <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
-        <li class="ul__li"><a href="destination-moon.html"><span>01</span> DESTINATION</a></li>
+        <li class="ul__li active"><a href="destination-moon.html"><span>01</span> DESTINATION</a></li>
         <li class="ul__li"><a href="/pages/crew/crew-commander.html"><span>02</span> CREW</a></li>
         <li class="ul__li"><a href="/pages/technology/technology-vehicle.html"><span>03</span> TECHNOLOGY</a></li>
       </ul>
@@ -33,7 +33,7 @@
     
   </nav>
 
-  <main class="main main__destination" id="main">
+  <main class="main__destination" id="main">
 
     <h2><span>01</span>Pick your destination</h2>
 
