--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <div class="nav__responsive">
       <ul class="nav__ul">
-        <li class="ul__li"><a href="index.html"><span>00</span> HOME</a></li>
+        <li class="ul__li active"><a href="index.html"><span>00</span> HOME</a></li>
         <li class="ul__li"><a href="pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
         <li class="ul__li"><a href="pages/crew/crew-commander.html"><span>02</span> CREW</a></li>
         <li class="ul__li"><a href="pages/technology/technology-vehicle.html"><span>03</span> TECHNOLOGY</a></li>
