--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -27,13 +27,13 @@
         <li class="ul__li"><a href="/index.html"><span>00</span> HOME</a></li>
         <li class="ul__li"><a href="/pages/destination/destination-moon.html"><span>01</span> DESTINATION</a></li>
         <li class="ul__li"><a href="/pages/crew/crew-commander.html"><span>02</span> CREW</a></li>
-        <li class="ul__li"><a href="technology-vehicle.html"><span>03</span> TECHNOLOGY</a></li>
+        <li class="ul__li active"><a href="technology-vehicle.html"><span>03</span> TECHNOLOGY</a></li>
       </ul>
     </div>
     
   </nav>
 
-  <main class="main main__technology" id="main">
+  <main class="main__technology" id="main">
 
     <h2 class="technology__title"><span>03</span>Space launch 101</h2>
 
