Destination HTML y CSS resonsive

--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -44,10 +44,10 @@
 
     <div class="destination__options">
       <ul>
-        <li id="destination1">Moon</li>
-        <li id="destination2">Mars</li>
-        <li id="destination3">Europa</li>
-        <li id="destination4">Titan</li>
+        <li id="destination1" class="destiny active">Moon</li>
+        <li id="destination2" class="destiny">Mars</li>
+        <li id="destination3" class="destiny">Europa</li>
+        <li id="destination4" class="destiny">Titan</li>
       </ul>
     </div>
 
