Crew HTML y CSS responsive

--- a/pages/crew/crew-commander.html
+++ b/pages/crew/crew-commander.html
@@ -43,10 +43,10 @@
 
     <div class="crew__options">
       <ul>
-        <li id="destination1"></li>
-        <li id="destination2"></li>
-        <li id="destination3"></li>
-        <li id="destination4"></li>
+        <li id="destination1" class="person active"></li>
+        <li id="destination2" class="person"></li>
+        <li id="destination3" class="person"></li>
+        <li id="destination4" class="person"></li>
       </ul>
     </div>
 
