--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -44,9 +44,9 @@
 
     <div class="technology__options">
       <ul id="options">
-        <li id="technology1 option">1</li>
-        <li id="technology2 option">2</li>
-        <li id="technology3 option">3</li>
+        <li id="technology1 option" class="tech active">1</li>
+        <li id="technology2 option" class="tech">2</li>
+        <li id="technology3 option" class="tech">3</li>
       </ul>
     </div>
 
