Limpieza del código, faltan agregar y modificar las variables en sass

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
 
   <nav class="nav container">
-    <img src="./assets/shared/logo.svg" alt="Logo" class="nav__logo">
+    <a href="index.html">
+      <img src="./assets/shared/logo.svg" alt="Logo" class="nav__logo">
+    </a>
 
     <div class="nav__buttons">
       <img src="./assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
@@ -42,13 +44,8 @@
       because we’ll give you a truly out of this world experience!
     </p>
 
-    <button class="main__button">Explore</button>
+    <button class="main__button" id="button"><a href="pages/destination/destination-moon.html">Explore</a></button>
   </main>
-
-  <!-- 00 Home
-  01 Destination
-  02 Crew
-  03 Technology-->
 
   <script src="js/app.js"></script>
 
