--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -15,7 +15,9 @@
 <body class="technology">
 
   <nav class="nav container">
-    <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
+    <a href="/index.html">
+      <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
+    </a>
 
     <div class="nav__buttons">
       <img src="/assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
