--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -15,7 +15,9 @@
 <body class="destination">
 
   <nav class="nav container">
-    <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
+    <a href="/index.html">
+      <img src="/assets/shared/logo.svg" alt="Logo" class="nav__logo">
+    </a>
 
     <div class="nav__buttons">
       <img src="/assets/shared/icon-hamburger.svg" alt="Icon hamburger" class="icon icon__open">
@@ -39,7 +41,6 @@
 
     <div class="main__img">
       <img id="image" src="/assets/destination/image-moon.png" alt="Image Moon"> 
-      <!-- <img src="/assets/destination/image-moon.webp" alt="Image Moon">  -->
     </div>
 
     <div class="destination__options">
